# picovideo

./: CMakeLists.txt  ENV_VARS  Framerate.h  IMGS_DIR  LIB_PATHS  Pico_spec.h  README.md  TODO.txt  bytearray.py  clean  compress-blokweav.c  compress-singlefr.c  env_vars  lib_pathfinder.sh  makeclean  makevideo  primed-test.c  primed.h  set_env_var.sh  shortestarg  video.c  video.uf2  weave.c  weave.h  weave_test.c
ram_find/: CMakeLists.txt  README.txt  ram_find.c
screens/: CMakeLists.txt  LCD_1in8_video.c  LCD_ALL_tools.c  LCD_ALL_tools.h  LCD_ALL_video.h  LCD_tools_ALL.c  LCD_tools_ALL.c~  LCD_tools_ALL.h  LCD_video_1in8.c  LCD_video_ALL.h  LCD_video_ALL.h~
tmp/: primed.c
